# jeeves-unchained

./: .env.example  .gitignore  .quota-state.json  2026-05-01-quality-overhaul-sprint12-plan.md  CLAUDE.md  EVAL_GATE.md  LOOP_STATE.md  README.md  ROADMAP.md  ROADMAP.superseded-2026-05-21.md  SETUP.md  handoff-2026-05-03-review-sprint.md  handoff-quality-sprint.md  pyproject.toml  refactor-design-2026-05-21.md  skill-sprint.md  skills-lock.json  smoke_test_sprint12.py
.claude/: loop.md
.memory/: audit-log.md  decisions.md  inbox.md  patterns.md
decisions/: crawl4ai-probe-2026-05-20.md  loop-audit-log.md  m0-followup-design-revision-2026-05-21.md  m6-acceleration-2026-05-21.md  monitoring-architecture-2026-05-21.md  tier3-meta-monitor-2026-05-21.md
jeeves/: __init__.py  alert.py  audit_models.py  config.py  correspondence.py  dedup.py  email.py  gmail.py  llm.py  priority_contacts.json  research_sectors.py  schema.py  session_io.py  vault.py  write.py
reports/: systematic-debugging-2026-05-05.md  tinyfish-skeleton-2026-05-05.md
scripts/: archive_old_sessions.py  audit.py  audit_fix.py  audit_health_report.py  audit_resend.py  check_gmail_oauth.py  correspondence.py  eval_briefing.py  eval_extractors.py  eval_postprocess.py  eval_search.py  eval_tool_dispatch.py  gmail_auth.py  graduate_skill_body.py  graduate_skip_lists.py  health_check.py  healthcheck.py  loop_monitor.py  mine_golden_set.py  notify_pipeline_failure.py  quality_telemetry_report.py  quota_report.py  recover_oauth.sh  research.py  tokens_per_call_report.py  write.py
sessions/: audit-2026-05-06.json  audit-2026-05-07.json  audit-2026-05-07.post-fix.json  audit-2026-05-08.json  audit-2026-05-08.post-fix.json  audit-2026-05-09.json  audit-2026-05-09.post-fix.json  audit-2026-05-10.json  audit-2026-05-10.post-fix.json  audit-2026-05-11.json  audit-2026-05-11.post-fix.json  audit-2026-05-13.json  audit-2026-05-13.post-fix.json  audit-2026-05-21.json  audit-2026-05-21.post-fix.json  audit-2026-06-17.json  audit-2026-06-17.post-fix.json  audit-2026-06-18.json  audit-2026-06-18.post-fix.json  audit-2026-06-22.json  audit-2026-06-22.post-fix.json  audit-2026-06-24.json  audit-2026-06-24.post-fix.json  audit-2026-06-26.json  audit-2026-06-26.post-fix.json  audit-2026-06-27.json  audit-2026-06-27.post-fix.json  audit-2026-06-28.json  audit-2026-06-28.post-fix.json  audit-2026-06-29.json  audit-2026-06-29.post-fix.json  audit-2026-06-30.json  audit-2026-06-30.post-fix.json  audit-fix-2026-05-06.json  audit-fix-2026-05-07.json  audit-fix-2026-05-08.json  audit-fix-2026-05-09.json  audit-fix-2026-05-10.json  audit-fix-2026-05-11.json  audit-fix-2026-05-13.json  (+368 more)
tests/: conftest.py  eval_baseline.json  smoke_dedup_isolated.py  test_alert.py  test_anaphoric_opener.py  test_archive_old_sessions.py  test_asides_gate_injector_primary.py  test_asides_injector.py  test_audit.py  test_audit_cli_signal.py  test_audit_fix.py  test_audit_fix_validator.py  test_audit_health_report.py  test_audit_models.py  test_b_handlers.py  test_brave_search.py  test_cascade_rebalance.py  test_cerebras_rotation.py  test_charlotte_audit.py  test_check_gmail_oauth.py  test_correspondence.py  test_correspondence_or_fallback.py  test_correspondence_quality.py  test_correspondence_render_fallback.py  test_crawl4ai_extract.py  test_crawl4ai_probe.py  test_dedup.py  test_dedup_hardening.py  test_dedup_helpers_standalone.py  test_dedup_improvements.py  test_dedup_normalization.py  test_dedup_progressive.py  (+56 more)
(+74 files in other folders)
